Finished login and registration: -Implemented role dropdown menu during registration -Updated error handling -Implemented logout function

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -16,6 +16,9 @@
             </form>
             <br>
             <a href="#/register">Not registered yet?</a>
+            <div class="alert alert-danger" ng-show="failed == true">
+              Login has failed: {{errorMsg}}
+            </div>
           </div>
         </div>
       </div>
