Made modules api: -Implemented get modules method based on username of logged in user -Need to make mongo query

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-6" ng-controller="HomeController">
-			<div class="panel panel-primary">
-				<div class="panel-heading"><b>Panel</b></div>
+		<div class="col-md-8 col-md-offset-2" ng-controller="HomeController">
+			<div class="panel panel-default">
+				<div class="panel-heading" style="text-align: center;"><b>Modules</b></div>
 				<div class="panel-body">
-					<b>Hello: {{test}}</b>
+					<b>Module</b>
 				</div>
 			</div>
 		</div>
