--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -7,10 +7,10 @@
           <div class="panel-body">
             <form ng-submit="login()">
               <div class="form-group">
-                <input type="text" ng-model="user.username" name="username" placeholder="Username" class="form-control" required><br>
-              </div>
-              <div class="form-group">
-                <input type="password" ng-model="user.password" name="password" placeholder="Password" class="form-control" required><br>
+                <label>Username:</label>
+                <input type="text" ng-model="user.username" name="username" class="form-control" required><br>
+                <label>Password:</label>
+                <input type="password" ng-model="user.password" name="password" class="form-control" required><br>
               </div>
               <button type="submit" class="btn btn-success">Submit</button>
             </form>
