--- a/public/partials/module.html
+++ b/public/partials/module.html
@@ -12,6 +12,15 @@
 						<li>Content 1</li>
 						<li>Content 2</li>
 					</ol>
+
+					<form action="/api/sections/uploadFile" method="post" enctype="multipart/form-data"> <!-- ng-submit="uploadFile()" -->
+						<input type="file" name="myFile" ng-model="aFile">
+						<br>
+						<input type="text" name="moduleId" ng-model="id" hidden>
+						<input type="text" name="sectionId" ng-model="section._id" hidden>
+						<button class="btn btn-sm btn-success" type="submit">Submit</button>
+					</form>
+
 				</div>
 				<div class="panel-body" ng-show="sections.length == 0">
 					No sections
