Started adding import section feature

--- a/public/partials/addModule.html
+++ b/public/partials/addModule.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="AddModuleController">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
-			<div class="panel panel-default">
+			<div class="panel panel-primary">
 				<div class="panel-heading" style="text-align: center;">
 					<b>Add Module</b>
 				</div>
