Importing sections to modules

--- a/public/partials/addSection.html
+++ b/public/partials/addSection.html
@@ -13,6 +13,9 @@
 							<br>
 							<label>Description:</label>
 							<input type="text" name="description" class="form-control" ng-model="section.description">
+							<br>
+							<label>Hidden:</label>
+							<input type="checkbox" name="hidden" ng-model="section.hidden">
 						</div>
 						<input type="submit" value="Submit" class="btn btn-md btn-success">
 					</form>
