--- a/public/partials/module.html
+++ b/public/partials/module.html
@@ -8,7 +8,11 @@
 					<a href="#/module/{{id}}/importSection" class="btn btn-success btn-sm">Import Section</a>
 				</div>
 				<div class="panel-body" ng-repeat="section in sections">
-					<h3>{{section.name}}  <button class="btn btn-default btn-sm" ng-click="unlink(section._id)">Unlink</button></h3>
+					<h3>{{section.name}}  
+						<button class="btn btn-default btn-sm" ng-click="unlink(section._id)">Unlink</button>
+						<button class="btn btn-default btn-sm" ng-click="show(section._id)" ng-if="section.hidden == true">Show</button>
+						<button class="btn btn-default btn-sm" ng-click="hide(section._id)" ng-if="section.hidden == false">Hide</button>
+					</h3>
 					<label>{{section.description}} {{section._id}}</label>
 					<ol>
 						<li ng-repeat="content in section.content"><a href="/api/sections/downloadFile/{{content._id}}" download="{{content.name}}">{{content.name}}</a></li>
