--- a/public/partials/importSection.html
+++ b/public/partials/importSection.html
@@ -1,6 +1,10 @@
 <div class="container-fluid" ng-controller="ImportController">
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
+			<div class="btn-group pull-left" style="padding-top: 6px; padding-left: 5px">
+				<a href="#/module/{{modId}}" class="btn btn-sm btn-default">Back</a>
+			</div>
+
 			<div class="panel panel-primary">
 				<div class="panel-heading" style="text-align: center;">
 					<b>Import Section</b>
