--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,7 +3,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-default">
 				<div class="panel-heading" style="text-align: center;">
-					<h3>Modules</h3><a href="#/addModule" class="btn btn-success btn-sm">Add Module</a>
+					<h3>Modules</h3><a href="#/addModule" class="btn btn-success btn-sm" ng-if="loggedInUser.role == 'Lecturer'">Add Module</a>
 				</div>
 				<div class="panel-body" ng-repeat="module in modules">
 					<a href="#/module/{{module._id}}"><h2>{{module.name}}</h2></a>
