--- a/public/partials/module.html
+++ b/public/partials/module.html
@@ -6,6 +6,7 @@
 					<h3>{{name}}</h3>
 					<a href="#/module/{{id}}/addSection" class="btn btn-success btn-sm">Add Section</a>
 					<a href="#/module/{{id}}/importSection" class="btn btn-success btn-sm">Import Section</a>
+					<a href="#/module/{{id}}/editStudents" class="btn btn-success btn-sm">Edit Students</a>
 					<a ng-click="edit()" ng-if="editSection == false" class="btn btn-default btn-sm">Edit</a>
 					<a ng-click="save()" ng-if="editSection == true" class="btn btn-default btn-sm">Save</a>
 					<a ng-click="changeView()" class="btn btn-default btn-sm">View as Student</a>
