--- a/public/partials/module.html
+++ b/public/partials/module.html
@@ -27,6 +27,8 @@
 							<li ng-if="section.hidden == true"><a ng-click="show(section._id)">Show</a></li>
 							<li ng-if="section.hidden == false"><a ng-click="hide(section._id)">Hide</a></li>
 							<li><a ng-click="moveDown(section._id)">Move down</a></li>
+							<li class="divider"></li>
+							<li><a ng-click="deleteSection(section._id, id)">Delete</a></li>
 						</ul>
 					</div>
 					<br>
@@ -55,7 +57,7 @@
 		</div>
 	</div>
 
-	<div class="row" ng-if="viewAsStudent == true && loggedInUser.role == 'Student'">
+	<div class="row" ng-if="viewAsStudent == true && loggedInUser.role == 'Student' || viewAsStudent == true && loggedInUser.role == 'Lecturer'">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-default">
 				<div class="panel-heading" style="text-align: center;">
