--- a/public/partials/module.html
+++ b/public/partials/module.html
@@ -14,6 +14,8 @@
 							<li class="divider"></li>
 							<li><a ng-click="edit()" ng-if="editSection == false">Edit</a></li>
 							<li><a ng-click="save()" ng-if="editSection == true">Save</a></li>
+							<li class="divider"></li>
+							<li><a ng-click="deleteModule(id)">Delete module</a></li>
 						</ul>
 					</div>
 				</div>
